# vibecoder-ai

./: .env  .gitignore  README.md  agent.py
backend/: README.md  agent_service.py  agents.py  main.py  pipeline.py  pyproject.toml  qa_tools.py  requirements.txt  schemas.py  session.py  workspace.py  workspace_manager.py
backend/app/: main.py
backend/app/agents/: architect.py  base.py  developer.py  devops.py  reviewer.py
backend/app/constants/: core.py
backend/app/core/: config.py  database.py  dependencies.py  session.py  workspace.py
backend/app/routers/: chat.py  jira.py  webhooks.py  workspace.py
backend/app/schemas/: models.py
backend/app/services/: executor.py  pipeline.py
frontend/: README.md  index.html  package.json
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: ChatInterface.jsx  DiffCard.jsx  PlanCard.jsx  SetupForm.jsx
frontend/src/components/atoms/: Badge.tsx  Button.tsx  Input.tsx  Spinner.tsx  TextArea.tsx
frontend/src/components/molecules/: SegmentedControl.tsx
frontend/src/components/organisms/: ChatInterface.tsx  ChatMessage.tsx  DiffCard.tsx  PlanCard.tsx  SetupWizard.tsx  SlackLinkModal.tsx
frontend/src/components/templates/: MainLayout.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: App.jsx
src/components/: LogoutButton.jsx
src/context/: AuthContext.jsx
src/pages/: Dashboard.jsx  Login.jsx
